<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signupbg"
    tools:context=".signinActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/whatsappsignin" />


        <EditText
            android:id="@+id/etemail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/clickSignUp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cilckFor"
            android:textAlignment="textEnd"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary"
            android:text="@string/signInBut" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/btngoogle"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:text="@string/google"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnfb"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fb_color"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.098"
        tools:layout_editor_absoluteX="78dp">

        <TextView
            android:id="@+id/signupPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary"
            android:layout_weight="1"
            android:text="@string/phonesighnup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>